<resources>
    <string name="app_name">Super Hero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="entrar_com_redes_sociais">Entrar com redes sociais</string>
    <string name="novo_por_aqui">Novo por aqui?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="entrar">Entrar</string>
    <string name="home">Home</string>
    <string name="populares">Populares</string>
    <string name="lan_amentos">Lançamentos</string>
    <string name="especiais">Este mês!</string>
    <string name="capitao_america">Capitão America</string>
    <string name="user">user</string>
    <string name="avengers">Avengers</string>
    <string name="iron_man">Iron Man</string>
    <string name="huck">Huck</string>
    <string name="thor">Thor</string>
    <string name="pagamento_recusado">Pagamento Recusado</string>
    <string name="pagamento_pendente">Pagamento Pendente</string>
    <string name="pagamento_aprovado">Pagamento Aprovado</string>
    <string name="foto_do_usuario">Foto do usuario</string>

    <string name="facebook_app_id">700780411342362</string>
    <string name="facebook_client_token">6ca71c6c8a9a805d1a6f173e6fdd0146</string>
    <string name="web_token_id">401208676758-2ib0ejkbn0onu9gdqfdvr1qogovf1627.apps.googleusercontent.com</string>
    <string name="escolha_a_forma_de_pagamento">Escolha a forma de pagamento.</string>
    <string name="pix">Código Pix</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="mensagem_erro">Desculpe, ocorreu um erro.</string>
    <string name="recarregar">Recarregar</string>
    <string name="queryHint_pesquisa">Pesquise por gibi, personagem...</string>


</resources>