<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="@drawable/super_hero_bg"
    >

    <ImageView
        android:id="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo3"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/lemon"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:alpha="0.7"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/red"
        app:hintTextColor="@color/red"
        app:boxStrokeColor="@color/red"
        android:textColorHint="@color/ice"
        app:endIconMode="clear_text"
        app:endIconTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/login_txt"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:alpha="0.7"
        app:startIconDrawable="@drawable/ic_baseline_traffic_24"
        app:startIconTint="@color/red"
        app:hintTextColor="@color/red"
        app:boxStrokeColor="@color/red"
        android:textColorHint="@color/ice"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pass_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword"
            />


    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/login_entrar_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/entrar"
        android:layout_marginTop="20dp"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_google"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/login_entrar_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_facebook"
        android:text="Google"
        app:iconTintMode="multiply"
        app:icon="@drawable/google_icon"
        app:iconSize="25dp"
        android:layout_marginEnd="20dp"
        />


    <Button
        android:id="@+id/login_facebook"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="@id/login_google"
        app:layout_constraintBottom_toBottomOf="@id/login_google"
        app:layout_constraintStart_toEndOf="@id/login_google"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/face_blue"
        app:iconTintMode="multiply"
        app:icon="@drawable/facebook_icon"
        app:iconSize="25dp"
        android:text="Facebook"
        />



    <TextView
        android:id="@+id/txt_novo_por_aqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo_por_aqui"
        android:textColor="@color/red"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txt_cadastrar"
        />


    <TextView
        android:id="@+id/txt_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/login_google"
        app:layout_constraintStart_toEndOf="@id/txt_novo_por_aqui"
        app:layout_constraintBottom_toBottomOf="@id/txt_novo_por_aqui"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_minha_senha"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/login_google"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_loader"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:lottie_rawRes="@raw/ironman_loader"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
    />



</androidx.constraintlayout.widget.ConstraintLayout>